--- a/AU_extractor.ipynb
+++ b/AU_extractor.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Py-Feat to get AU's"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -44,6 +51,13 @@
     "                file_names.append(file)\n",
     "                df.index = file_names\n",
     "df \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exporting the dataframe as csv"
    ]
   },
   {
