--- a/AU_data.ipynb
+++ b/AU_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +142,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values in each column:\n",
+      "emotion      0\n",
+      "emotionID    0\n",
+      "mouth        0\n",
+      "mouthID      0\n",
+      "AU01         0\n",
+      "AU02         0\n",
+      "AU04         0\n",
+      "AU05         0\n",
+      "AU06         0\n",
+      "AU07         0\n",
+      "AU09         0\n",
+      "AU10         0\n",
+      "AU11         0\n",
+      "AU12         0\n",
+      "AU14         0\n",
+      "AU15         0\n",
+      "AU17         0\n",
+      "AU20         0\n",
+      "AU23         0\n",
+      "AU24         0\n",
+      "AU25         0\n",
+      "AU26         0\n",
+      "AU28         0\n",
+      "AU43         0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_values = df.isnull().sum()\n",
+    "print(\"Missing values in each column:\")\n",
+    "print(missing_values)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6075581395348837\n"
+      "Accuracy: 0.6540697674418605\n"
      ]
     }
    ],
@@ -167,7 +211,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# train test split\n",
-    "X = df.drop(columns=[\"emotion\", \"emotionID\", \"mouth\", \"mouthID\"])\n",
+    "X = df.drop(columns=[\"emotion\", \"emotionID\", \"mouth\"])\n",
     "y = df[\"emotionID\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -189,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -197,26 +241,27 @@
      "output_type": "stream",
      "text": [
       "Feature importance:\n",
-      "AU04 0.09569031558046369\n",
-      "AU12 0.09393626124589684\n",
-      "AU01 0.07616078086147186\n",
-      "AU06 0.07568996890537406\n",
-      "AU02 0.07163818152576217\n",
-      "AU09 0.06617147879766866\n",
-      "AU14 0.06402221557185103\n",
-      "AU05 0.04881467947958122\n",
-      "AU10 0.048549233961793004\n",
-      "AU15 0.04824138023722318\n",
-      "AU25 0.04612976464314444\n",
-      "AU43 0.04552812290178321\n",
-      "AU24 0.0411927873296174\n",
-      "AU17 0.04039245957275505\n",
-      "AU26 0.039056741638330394\n",
-      "AU23 0.03846580145850042\n",
-      "AU28 0.036319812834320286\n",
-      "AU07 0.010557989302876618\n",
-      "AU11 0.006870419823505121\n",
-      "AU20 0.006571604328081444\n"
+      "AU12 0.09815540033668367\n",
+      "AU04 0.09427571449058612\n",
+      "AU06 0.08470637183695781\n",
+      "AU02 0.07413651268069742\n",
+      "AU01 0.06744996459620624\n",
+      "AU09 0.06018907304130359\n",
+      "mouthID 0.056779556322712005\n",
+      "AU05 0.051595784290296307\n",
+      "AU14 0.04765346981299687\n",
+      "AU10 0.043639353321288175\n",
+      "AU15 0.042795497002020295\n",
+      "AU25 0.04121194530991132\n",
+      "AU43 0.040193152683379245\n",
+      "AU24 0.038679974430491565\n",
+      "AU26 0.03599581946206268\n",
+      "AU17 0.03590134218162258\n",
+      "AU23 0.03402099891273977\n",
+      "AU28 0.032815380585133315\n",
+      "AU07 0.008814931783109183\n",
+      "AU20 0.00553024550650419\n",
+      "AU11 0.005459511413297794\n"
      ]
     }
    ],
@@ -245,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
