--- a/Classifiers_AU_UIBVFED_to_RADIATE.ipynb
+++ b/Classifiers_AU_UIBVFED_to_RADIATE.ipynb
@@ -87,7 +87,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "df2 = pd.read_csv('UIBVFED_AU_Fixed.csv', index_col=0)\n",
+        "df2 = pd.read_csv('UIBVFED_AU.csv', index_col=0)\n",
         "df2"
       ],
       "metadata": {
