--- a/Classifiers_AU_RADIATE_to_UIBVFED.ipynb
+++ b/Classifiers_AU_RADIATE_to_UIBVFED.ipynb
@@ -1367,6 +1367,39 @@
         "  y_pred1 = clf.predict(X1)\n",
         "  print(clf.__class__.__name__, \"Accuracy:\", accuracy_score(y1, y_pred1))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.2770 - loss: 3.8845   \n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[3.6015102863311768, 0.3696969747543335]"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# dl model\n",
+        "from tensorflow.keras.models import load_model\n",
+        "\n",
+        "dl_model = load_model('best_model.keras')\n",
+        "\n",
+        "# Evaluate the best model on the test set\n",
+        "dl_model.evaluate(X1, y1)"
+      ]
     }
   ],
   "metadata": {
